styles.css
@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');

/*
  1. Use a more-intuitive box-sizing model.
*/
*, *::before, *::after {
  box-sizing: border-box;
}

/*
  2. Remove default margin
*/
* {
  margin: 0;
}

/*
  Typographic tweaks!
  3. Add accessible line-height
  4. Improve text rendering
*/
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

/*
  5. Improve media defaults
*/
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

/*
  6. Remove built-in form typography styles
*/
input, button, textarea, select {
  font: inherit;
}

/*
  7. Avoid text overflows
*/
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

/*
  8. Create a root stacking context
*/
#root, #__next {
  isolation: isolate;
}

:root {
  /* Colors */
  --strong-cyan: hsl(171, 66%, 44%);
  --light-blue: hsl(233, 100%, 69%);
  --dark-grayish-blue: hsl(210, 10%, 33%);
  --grayish-blue: hsl(201, 11%, 66%);

  /* Typography */
  --font-family: 'Bai Jamjuree', sans-serif;
  --font-weight-regular: 400;
  --font-weight-semibold: 600;
}

body {
  font-family: var(--font-family);
  color: var(--grayish-blue);
}

.bg-header {
  background-image: url('images/bg-header-desktop.png');
  background-size: cover;
  background-position: center;
  position: relative;
  z-index: 1;
}

.bg-header::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: linear-gradient(180deg, white 0%, rgba(255, 255, 255, 0) 100%);
  opacity: 0.25;
  z-index: -1;
}

.header-content {
  padding-top: 8rem;
  padding-bottom: 8rem;
}

.bg-header .container {
  position: relative;
  z-index: 2;
}

h1 {
  font-size: 2.875rem;
  font-weight: var(--font-weight-semibold);
}

h1, h2, h3 {
  color: var(--dark-grayish-blue);
}

h3 {
  font-size: 1.45rem;
}

.custom-h2 {
  font-size: 2.25rem;
  font-style: normal;
  line-height: normal;
  letter-spacing: -0.03669rem;
}

.container:nth-of-type(7) .custom-h2 {
  margin-top: 5rem;
}

.lead {
  line-height: 1.875rem;
  letter-spacing: 0.009375rem;
}

.custom-btn {
  width: 14.1875rem;
  height: 3.5rem;
  border-radius: 1.75rem !important;
}

.btn-primary {
  background-color: var(--strong-cyan);
  border-color: var(--strong-cyan);
  box-shadow: 0 0.625rem 1.25rem rgba(137, 229, 199, 0.50);
}

.btn-secondary {
  background-color: var(--light-blue);
  border-color: var(--light-blue);
  box-shadow: 0 0.625rem 1.25rem rgba(97, 116, 255, 0.50);
}

.btn-primary:hover,
.btn-primary:focus {
  background-color: hsl(171, 66%, 54%);
  border-color: hsl(171, 66%, 54%);
}

.btn-secondary:hover,
.btn-secondary:focus {
  background-color: hsl(233, 100%, 79%);
  border-color: hsl(233, 100%, 79%);
}

.btn-lg {
  font-size: 1.125rem;
  line-height: 1.875rem;
  letter-spacing: 0.03125rem;
  padding: 0.75rem 2rem;
}

.text-content {
  width: 21.875rem;
  height: 25.375rem;
  margin-left: 6.875rem;
}

.grid-container {
  display: grid;
  height: 15em;
  grid-template-rows: 1fr min-content 1fr;
  justify-content: center;
  align-items: start;
}

.grid-container p {
  max-width: 22rem;
}

.footer-clipboard-logo {
  margin-right: 3.5em;
}

.footer-clipboard-logo img {
  width: 45%;
}

ul.list-unstyled.d-flex.gap-3.mb-0 li:hover {
  color: var(--strong-cyan);
}

.footer-links-grid {
  display: grid;
  max-width: 31em;
  min-height: 3.5em;
  grid-template-columns: repeat(3, 1fr);
  gap: 1em;
}


.footer-links-grid a {
  text-decoration: none;
  color: inherit;
}

.footer-links-grid a:hover {
  color: var(--strong-cyan);
}

